--- a/Rise.Server/appsettings.json
+++ b/Rise.Server/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=course-dit-pbatin-mt3-s1-rise-1.tail685348.ts.net,1433;Database=Hogent.RiseDb;User ID=sa;Password=Password1234!;Encrypt=Optional;TrustServerCertificate=true"
-  },
+    "SqlServer": "Server=192.168.56.11,1433;Database=Hogent.RiseDb;User Id=sa;Password=Password1234!;Encrypt=Optional;TrustServerCertificate=true"
   "Auth0": {
     "Authority": "https://360zorg.eu.auth0.com",
     "Audience": "https://api.rise.com",
