--- a/JenkinsFile
+++ b/JenkinsFile
@@ -68,11 +68,11 @@ pipeline {
     post {
         always {
             echo "Cleaning up unused Docker resources locally..."
-            agent { node { label 'builtin' } }
+            agent { label 'builtin' }
             sh 'docker system prune -f || true'
         }
         success {
-            agent { node { label 'builtin' } }
+            agent { label 'builtin' }
             echo "Pipeline completed successfully!"
         }
     }
